--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-    height: 100%;
+    height: 100vh;
     font-family: sans-serif;
     margin: 0;
     padding: 0;
@@ -34,7 +34,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90%;
+    width: 60%;
     box-shadow: 4px 0 20px 0px #d8d8d8;
     background: black;
     /* border-right: 3px solid lightgray; */
@@ -67,6 +67,7 @@ h1 {
     width: 100%;
     height: 3px;
     background: tomato;
+    margin-top: 10px;
 }
 
 .span-name {
@@ -79,18 +80,16 @@ h1 {
     padding-left: 0;
     padding-bottom: 15px;
     text-decoration: none;
-    justify-content: center;;
-}
-
-
-/* .nav-principal {
-    display: flex;
-    padding: 0;
     flex-direction: column;
-    align-items: flex-start;
-    margin: 0;
+    align-items: center;
 }
 
+
+.nav-principal {
+    padding-top: 30px;
+    width: 100%;
+}
+/* 
 a {
     text-decoration: none;
     display: block;
