--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@ h3{
 p{
     color: whitesmoke;
 }
+
+img{
+    max-width: 100%;
+}
 /*-------------------------------------------------------------------*/
 
 
@@ -131,7 +135,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 100px;
+    padding-left: 70px;
     background: black;
     width: 100%;
 }
@@ -170,7 +174,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 1000px;
+    /* width: 1000px; */
     padding-right: 70px;
 }
 
@@ -178,7 +182,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 1000px;
+    /* width: 1100px; */
     padding-right: 70px;
 }
 
@@ -194,16 +198,21 @@ a {
 }
 
 .figure-img{
-    padding-bottom: 15px;
-    padding-right: 25;
+    padding-bottom: 10px;
+    padding-right: 10px;
     padding-left: 10px;
     margin: 0;
     transition-duration: .5s;
 }
 
+.artist{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .figure-img:hover,                      /*Transiciones y transformaciones a las imagenes e iconos*/
 .link-socialmedia:hover{
-    transform: scale(1.15);
+    transform: scale(1.095);
 }
 .link-socialmedia{                      /*estilos iconos del container social media*/
     width: 50px;
